fix:(app) agregado overflow auto, margin en Form

--- a/src/components/AddGifts/AddGifts.css
+++ b/src/components/AddGifts/AddGifts.css
@@ -4,6 +4,7 @@
     justify-content:space-around;
     width: 100%;
     align-items:center;
+    margin:1rem 0 0 0;
 }
 
 
