--- a/src/components/List/List.css
+++ b/src/components/List/List.css
@@ -3,6 +3,7 @@
     justify-content: center;
     align-items: center;
     height: 100%;
+    overflow: auto;
     margin: 1rem auto auto auto;
     width: 100%;
 }
