--- a/src/styles.css
+++ b/src/styles.css
@@ -37,6 +37,7 @@ body {
 
 .App {
     width: 100%;
+    height: 100vh;
     display: flex;
     justify-content: space-between;
     padding: 1.625rem 0;
